--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Book search</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--    For views   -->
     <string name="title_book_list">Books</string>
@@ -12,17 +10,21 @@
     <string name="publisher">Publisher:</string>
     <string name="categories">Categories:</string>
     <string name="pages">Pages</string>
+    <string name="query_hint">Enter book or author</string>
+    <string name="book_cover_content_description">Book Cover</string>
 
+    <!--    System message-->
     <string name="no_such_book">"Something went wrong, try again later"</string>
     <string name="add_to_fav">Book successfully added to your collection</string>
     <string name="delete_fav">Book successfully removed from your collection</string>
 
+    <!--    Nav drawer-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Book Application</string>
     <string name="nav_header_subtitle">github.com/anovosvit</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="query_hint">Enter book or author</string>
+    <string name="favorites_button">fav_button</string>
 
 </resources>
