--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="pages">Pages</string>
     <string name="query_hint">Enter book or author</string>
     <string name="book_cover_content_description">Book Cover</string>
+    <string name="empty_book_collection">Your book collection is empty</string>
+    <string name="favorites_button">fav_button</string>
 
     <!--    System message-->
     <string name="no_such_book">"Something went wrong, try again later"</string>
@@ -25,6 +27,6 @@
     <string name="nav_header_subtitle">github.com/anovosvit</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="favorites_button">fav_button</string>
+    <string name="menu_refresh">Refresh</string>
 
 </resources>
