--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,10 @@
     <string name="no_such_book">"Something went wrong, try again later"</string>
     <string name="add_to_fav">Book successfully added to your collection</string>
     <string name="delete_fav">Book successfully removed from your collection</string>
+    <string name="add_error_message">This book already exists in your collection</string>
+    <string name="delete_error_message">You have already removed this book from the collection</string>
+    <string name="menu_refresh">Refresh</string>
+
 
     <!--    Nav drawer-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -27,6 +31,7 @@
     <string name="nav_header_subtitle">github.com/anovosvit</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="delete_all_books">Delete all books</string>
+    <string name="search">Search</string>
 
 </resources>
