--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,23 +15,26 @@
     <string name="empty_book_collection">Your book collection is empty</string>
     <string name="favorites_button">fav_button</string>
 
-    <!--    System message-->
+    <!--    System message  -->
     <string name="no_such_book">"Something went wrong, try again later"</string>
     <string name="add_to_fav">Book successfully added to your collection</string>
     <string name="delete_fav">Book successfully removed from your collection</string>
     <string name="add_error_message">This book already exists in your collection</string>
     <string name="delete_error_message">You have already removed this book from the collection</string>
     <string name="menu_refresh">Refresh</string>
+    <string name="delete_all_books">Delete all books</string>
+    <string name="search">Search</string>
+    <string name="go_to_reading">Go to reading</string>
+    <string name="add_to_collection">Add to Collection</string>
+    <string name="share">Share</string>
+    <string name="remove_from_collection">Remove from Collection</string>
 
-
-    <!--    Nav drawer-->
+    <!--    Nav drawer  -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Book Application</string>
     <string name="nav_header_subtitle">github.com/anovosvit</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="delete_all_books">Delete all books</string>
-    <string name="search">Search</string>
 
 </resources>
