--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="add_to_collection">Add to Collection</string>
     <string name="share">Share</string>
     <string name="remove_from_collection">Remove from Collection</string>
+    <string name="send_feedback">Send feedback</string>
 
     <!--    Nav drawer  -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -36,5 +37,9 @@
     <string name="nav_header_subtitle">github.com/anovosvit</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="general">General</string>
+    <string name="search_book">Search Book</string>
+    <string name="book_collection">Book Collection</string>
+    <string name="feedback">Feedback</string>
 
 </resources>
